--- a/public/views/newProductos.html
+++ b/public/views/newProductos.html
@@ -7,6 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <link rel="icon" type="image/png" href="../css/img/ventasPro.png">
 </head>
 <body class="bg-gray-50">
     <section class="py-12 px-4">
